Closed Bug 243274 Opened 20 years ago Closed 20 years ago

bookmark menu incorrectly displays tab groups until browser restart

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.8

People

(Reporter: jaas, Assigned: jaas)

Details

Attachments

(1 file)

1.31 KB, patch
stuart.morgan+bugzilla
: review+
mikepinkerton
: superreview+
Details | Diff | Splinter Review
1. Open a few tabs
2. Bookmark them as a tab group
3. Try to open the tab group via the Bookmarks menu

Actual Results:
The tab group just created is displayed as an empty folder.

Expected Results:
The tab group should be displayed and accessible as a normal tab group.

Workaround:
Restart the browser and it shows up correctly.
This is a fairly big problem. Should block 0.8.
Target Milestone: --- → Camino0.8
Attached patch fix v1Splinter Review
Easy fix. Bad order of operations.
Attachment #148184 - Flags: superreview?(pinkerton)
Attachment #148184 - Flags: review?(sbm5)
Comment on attachment 148184 [details] [diff] [review]
fix v1

sr=pink

should go on trunk and branch.
Attachment #148184 - Flags: superreview?(pinkerton) → superreview+
landed on trunk and branch
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment on attachment 148184 [details] [diff] [review]
fix v1

r=smorgan, as pointless as that is at this point :)
Attachment #148184 - Flags: review?(sbm5) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: