display bookmark tab group correctly in menu when added (bug 243274)